--- a/package.json
+++ b/package.json
@@ -1,20 +1,42 @@
 {
-  "name": "root",
-  "private": true,
+  "name": "borderlands3-ui",
+  "version": "0.0.1",
+  "description": "> TODO: description",
+  "author": "mrrs878 <mrrs878@foxmail.com>",
+  "homepage": "https://github.com/mrrs878/borderlands3-ui#readme",
+  "license": "ISC",
+  "main": "dist/src/index.js",
+  "module": "dist/src/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mrrs878/borderlands3-ui.git"
+  },
   "scripts": {
-    "clean": "rimraf packages/*/{lib,dist,tsconfig.tsbuildinfo}",
-    "build": "tsc --build && node scripts/process.mjs && rollup -c",
+    "clean": "rimraf dist",
+    "build": "npm run clean && rollup -c",
     "build:ci": "cross-env UMD=1 npm run build",
-    "dev": "run-p dev:bundle dev:tsc dev:process",
-    "dev:bundle": "rollup -cw",
-    "dev:tsc": "tsc --build --watch",
-    "dev:process": "node scripts/process.mjs --watch",
+    "release": "standard-version",
+    "storybook": "cross-env BROWSER=none start-storybook -p 6006",
     "test": "cross-env BABEL_ENV=test jest",
     "test:watch": "cross-env BABEL_ENV=test npm run test -- --watch",
-    "postinstall": "node scripts/postinstall.mjs",
     "pub": "npm run clean && npm run build:ci && lerna publish --yes",
     "lint": "eslint packages",
     "prepare": "husky install"
+  },
+  "bugs": {
+    "url": "https://github.com/mrrs878/borderlands3-ui/issues"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -24,19 +46,19 @@
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
     "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.2",
-    "@rollup/plugin-replace": "^2.4.2",
+    "@storybook/react": "^6.3.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
-    "@types/fs-extra": "^9.0.12",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.172",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.29.3",
-    "chokidar": "^3.5.2",
+    "babel-loader": "^8.2.2",
+    "babel-preset-react-app": "^10.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -45,15 +67,13 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
-    "fs-extra": "^10.0.0",
-    "glob": "^7.1.7",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
     "jest-screenshot": "^0.3.5",
-    "lerna": "^4.0.0",
+    "less-loader": "7.3.0",
     "lodash": "^4.17.21",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.3.6",
+    "postcss-url": "^10.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.53.2",
@@ -61,28 +81,15 @@
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-less": "^1.1.3",
     "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-polyfill-node": "^0.7.0",
     "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-url": "^3.0.1",
     "rollup-plugin-visualizer": "^5.5.2",
+    "standard-version": "^9.3.1",
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
-  },
-  "bundlewatch": {
-    "files": [
-      {
-        "path": "packages/*/dist/index.min.js"
-      }
-    ],
-    "ci": {
-      "repoBranchBase": "main",
-      "trackBranches": [
-        "main"
-      ]
-    }
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+  }
 }
