--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "author": "mrrs878 <mrrs878@foxmail.com>",
   "homepage": "https://github.com/mrrs878/borderlands3-ui#readme",
   "license": "ISC",
-  "main": "dist/src/index.js",
-  "module": "dist/src/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
+  ],
+  "keywords": [
+    "React.js",
+    "Borderlands3",
+    "Components Library",
+    "Typescript"
   ],
   "publishConfig": {
     "registry": "https://registry.npmjs.org",
@@ -25,10 +31,11 @@
     "build:ci": "cross-env UMD=1 npm run build",
     "release": "standard-version",
     "storybook": "cross-env BROWSER=none start-storybook -p 6006",
-    "test": "cross-env BABEL_ENV=test jest",
+    "storybook:export": "build-storybook",
+    "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
     "test:watch": "cross-env BABEL_ENV=test npm run test -- --watch",
-    "pub": "npm run clean && npm run build:ci && lerna publish --yes",
-    "lint": "eslint packages",
+    "pub": "npm run build:ci && git push --follow-tags origin main && npm publish",
+    "lint": "eslint src",
     "prepare": "husky install"
   },
   "bugs": {
@@ -49,16 +56,17 @@
     "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.2",
+    "@rollup/plugin-typescript": "^8.2.5",
     "@storybook/react": "^6.3.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.172",
+    "@types/react": "^17.0.29",
+    "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.29.3",
-    "babel-loader": "^8.2.2",
-    "babel-preset-react-app": "^10.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -85,11 +93,11 @@
     "rollup-plugin-polyfill-node": "^0.7.0",
     "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-url": "^3.0.1",
     "rollup-plugin-visualizer": "^5.5.2",
     "standard-version": "^9.3.1",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
