--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rollup": "^2.53.2",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-less": "^1.1.3",
