--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.2",
     "@rollup/plugin-typescript": "^8.2.5",
+    "@storybook/addon-backgrounds": "^6.3.12",
     "@storybook/react": "^6.3.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -76,6 +77,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "husky": "^7.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "jest-screenshot": "^0.3.5",
     "less-loader": "7.3.0",
