--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "clean": "rimraf dist",
     "build": "npm run clean && rollup -c",
     "build:ci": "cross-env UMD=1 npm run build",
-    "release": "standard-version",
+    "version": "standard-version",
     "storybook": "cross-env BROWSER=none start-storybook -p 6006",
     "storybook:export": "build-storybook -o docs-build --no-dll",
     "test": "cross-env BABEL_ENV=test jest --passWithNoTests",
@@ -102,5 +102,8 @@
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.5",
     "typescript-plugin-css-modules": "^3.4.0"
+  },
+  "dependencies": {
+    "@svgdotjs/svg.js": "^3.1.1"
   }
 }
