--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.8",
   "description": "> TODO: description",
   "author": "mrrs878 <mrrs878@foxmail.com>",
-  "homepage": "https://github.com/mrrs878/borderlands3-ui#readme",
-  "license": "ISC",
+  "homepage": "https://mrrs878.github.io/borderlands3-ui",
+  "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
