--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
+    "@types/animejs": "^3.1.4",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.172",
     "@types/react": "^17.0.29",
@@ -106,6 +107,7 @@
   },
   "dependencies": {
     "@svgdotjs/svg.js": "^3.1.1",
+    "animejs": "^3.2.1",
     "rc-notification": "^4.5.7"
   }
 }
