--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,12 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: DOCS
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    tags:
+      - tags: ['v[0-9].[0-9]+.[0-9]+']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
