--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,8 +6,7 @@ name: DOCS
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    tags:
-      - tags: ['v[0-9].[0-9]+.[0-9]+']
+    tags: ['v[0-9].[0-9]+.[0-9]+']
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
