--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/animejs": "^3.1.4",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.172",
+    "@types/ramda": "^0.27.60",
     "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
